# bulk_edit_obsidian

./: README.md  pyproject.toml
isoformatting_cdt/: format_cdt.py  format_cdt_obsidian_vault.py  functions.py
testing_batch_editing_obsidian/: batch_editing_cdt.ipynb  batch_editing_spanish_tag.ipynb  format_cdt.py  format_cdt_obsidian_vault.py  functions.py  main.py  markdown_parser.py  testing_frontmatter.ipynb
testing_batch_editing_obsidian/updated_notes/: test_note.md  test_note_2.md
tests/: test_markdown_parser.py
tests/test_data/test_cdt_parsing_files/: test_note.md  test_note_2.md  test_note_without_cdt.md
tests/test_data/test_formatting_cdt/: all_digit_cdt.md  all_hyphen_cdt.md
tests/test_data/test_markdown_file_parsing_files/: bad_frontmatter_file.md
tests/test_data/test_markdown_file_parsing_files/files_expect_to_pass/: no_frontmatter_file.md  parsable_file.md
tests/test_data/test_vault_format_cdt_fail_files/: test_note_incorrect_cdt_wrong_length.md  test_note_non_numeric_cdt.md
